perfil votar transaccion arreglado para distintos tamanios de pantalla

--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -7,6 +7,14 @@
   margin-right: 6px;
 }
 
+.foto-perfil {
+  margin: 0 auto
+}
+
+.centerBlock {
+  display: table;
+  margin: 0 auto;
+}
 
 .oferta{
 
