--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -36,6 +36,14 @@
   color:white;
 
 }
+
+#page-content
+{
+  height:60vh;
+  overflow:auto;
+}
+
+
 .a {
   color:white;
   height: 105px;
@@ -65,8 +73,8 @@
 }
 
 #lineainfinita {
-    overflow: hidden;
-    white-space: nowrap;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 h1 {
@@ -257,8 +265,8 @@ input::-webkit-input-placeholder {
 }
 
 .modal-header {
-    padding: 15px;
-    border-bottom: 0px solid;
+  padding: 15px;
+  border-bottom: 0px solid;
 }
 
 #elmaster{
@@ -267,65 +275,65 @@ input::-webkit-input-placeholder {
 
 /*.vcenter {
   margin-top:9%;
-}*/
+  }*/
 
-/* .modal-transparent */
+  /* .modal-transparent */
 
-.modal-transparent {
-  background: #494e48;
-}
-.modal-transparent .modal-content {
-  background: #494e48;
-}
-.modal-backdrop.modal-backdrop-transparent {
-  background: #494e48;
-}
-.modal-backdrop.modal-backdrop-transparent.in {
-  opacity: .65;
-  filter: alpha(opacity=65);
-}
-
-/* .modal-fullscreen */
-
-.modal-fullscreen {
-  background: #494e48;
-  color:white;
-}
-.modal-fullscreen .modal-content {
-  background: #494e48;
-  border: 0;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-.modal-backdrop.modal-backdrop-fullscreen {
-  background: #494e48;
-}
-.modal-backdrop.modal-backdrop-fullscreen.in {
-  opacity: .65;
-  filter: alpha(opacity=65);
-}
-
-/* .modal-fullscreen size: we use Bootstrap media query breakpoints */
-
-.modal-fullscreen .modal-dialog {
-  margin: 0;
-  margin-top:14%;
-  margin-right: auto;
-  margin-left: auto;
-  width: 100%;
-}
-@media (min-width: 768px) {
-  .modal-fullscreen .modal-dialog {
-    width: 750px;
+  .modal-transparent {
+    background: #494e48;
   }
-}
-@media (min-width: 992px) {
-  .modal-fullscreen .modal-dialog {
-    width: 970px;
+  .modal-transparent .modal-content {
+    background: #494e48;
   }
-}
-@media (min-width: 1200px) {
+  .modal-backdrop.modal-backdrop-transparent {
+    background: #494e48;
+  }
+  .modal-backdrop.modal-backdrop-transparent.in {
+    opacity: .65;
+    filter: alpha(opacity=65);
+  }
+
+  /* .modal-fullscreen */
+
+  .modal-fullscreen {
+    background: #494e48;
+    color:white;
+  }
+  .modal-fullscreen .modal-content {
+    background: #494e48;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+  .modal-backdrop.modal-backdrop-fullscreen {
+    background: #494e48;
+  }
+  .modal-backdrop.modal-backdrop-fullscreen.in {
+    opacity: .65;
+    filter: alpha(opacity=65);
+  }
+
+  /* .modal-fullscreen size: we use Bootstrap media query breakpoints */
+
   .modal-fullscreen .modal-dialog {
+    margin: 0;
+    margin-top:14%;
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%;
+  }
+  @media (min-width: 768px) {
+    .modal-fullscreen .modal-dialog {
+      width: 750px;
+    }
+  }
+  @media (min-width: 992px) {
+    .modal-fullscreen .modal-dialog {
+      width: 970px;
+    }
+  }
+  @media (min-width: 1200px) {
+    .modal-fullscreen .modal-dialog {
      width: 1170px;
-  }
-}
+   }
+ }
