--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -273,6 +273,8 @@ input::-webkit-input-placeholder {
   padding-right:0;
 }
 
+
+
 /*.vcenter {
   margin-top:9%;
   }*/
@@ -337,3 +339,25 @@ input::-webkit-input-placeholder {
      width: 1170px;
    }
  }
+
+ /* mostrar estrellas */
+
+ div.stars {
+  width: 100%;
+  display: inline-block;
+  float:left;
+}
+
+label.star {
+  padding-left:0.3em;
+  float: left;
+  font-size: 0.8em;
+}
+
+
+label.star:hover { transform: rotate(-15deg) scale(1.3); }
+
+label.star:before {
+  content: '\f005';
+  font-family: FontAwesome;
+}
